--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Design.NoActionBar">
-        <activity android:name=".principalActivity"></activity>
-        <activity android:name=".MainActivity"
+        android:theme="@style/Theme.AppCompat.DayNight">
+        <activity android:name=".Inicio"></activity>
+        <activity android:name=".principalActivity" />
+        <activity
+            android:name=".MainActivity"
             android:theme="@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
